# juan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
scripts/: test-slack-plan-block.ps1  test-slack-plan-stream.ps1
src/: agent.rs  agent_manager.rs  bridge.rs  cli.rs  config.rs  feishu.rs  handler.rs  main.rs  message_handler.rs  session.rs  session_manager.rs  slack.rs  slack_client.rs  utils.rs
src/handler/: command.rs  message.rs  permission.rs  shell.rs
