[package]
name = "anywhere"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
slack-morphism = { version = "2", features = ["hyper"] }
agent-client-protocol = "0.9"
dirs = "5"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
